--- a/samples/overlays/onlineboutique/operator.yaml
+++ b/samples/overlays/onlineboutique/operator.yaml
@@ -66,18 +66,10 @@ spec:
           value: "phd-carlos-results"
         - name: AWS_REGION
           value: "us-east-1"
-        - name: AWS_REGION
-          value: "us-east-1"
         - name: AWS_ACCESS_KEY_ID
-          valueFrom:
-            secretKeyRef:
-              name: aws-credentials
-              key: access-key-id
+          value: "access-key-id"
         - name: AWS_SECRET_ACCESS_KEY
-          valueFrom:
-            secretKeyRef:
-              name: aws-credentials
-              key: secret-access-key
+          value: "secret-access-key"""
         # ports:
         # - containerPort: 8080
         volumeMounts:
