--- a/crd/benchmarks.resiliencebench.io-v1.yml
+++ b/crd/benchmarks.resiliencebench.io-v1.yml
@@ -14,22 +14,14 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .status.completedScenarios
-      name: Completed
-      priority: 3
-      type: integer
+    - jsonPath: .status.executionQueueName
+      name: Execution Queue
+      priority: 1
+      type: string
     - jsonPath: .status.phase
       name: Phase
       priority: 0
       type: string
-    - jsonPath: .status.runningScenarios
-      name: Running
-      priority: 2
-      type: integer
-    - jsonPath: .status.totalScenarios
-      name: Total Scenarios
-      priority: 1
-      type: integer
     name: v1beta1
     schema:
       openAPIV3Schema:
@@ -186,11 +178,11 @@ spec:
             type: object
           status:
             properties:
-              completedScenarios:
-                type: integer
               completionTime:
                 type: string
               executionId:
+                type: string
+              executionQueueName:
                 type: string
               lastReconcileTime:
                 type: string
@@ -200,12 +192,8 @@ spec:
                 type: integer
               phase:
                 type: string
-              runningScenarios:
-                type: integer
               startTime:
                 type: string
-              totalScenarios:
-                type: integer
             type: object
         type: object
     served: true
