--- a/crd/queues.resiliencebench.io-v1.yml
+++ b/crd/queues.resiliencebench.io-v1.yml
@@ -13,7 +13,28 @@ spec:
     singular: queue
   scope: Namespaced
   versions:
-  - name: v1beta1
+  - additionalPrinterColumns:
+    - jsonPath: .status.completedScenarios
+      name: Completed
+      priority: 3
+      type: integer
+    - jsonPath: .status.pendingScenarios
+      name: Pending
+      priority: 4
+      type: integer
+    - jsonPath: .status.phase
+      name: Phase
+      priority: 0
+      type: string
+    - jsonPath: .status.runningScenarios
+      name: Running
+      priority: 2
+      type: integer
+    - jsonPath: .status.totalScenarios
+      name: Total Scenarios
+      priority: 1
+      type: integer
+    name: v1beta1
     schema:
       openAPIV3Schema:
         properties:
@@ -45,7 +66,32 @@ spec:
                 type: string
             type: object
           status:
+            properties:
+              completedScenarios:
+                type: integer
+              completionTime:
+                type: string
+              executionId:
+                type: string
+              lastReconcileTime:
+                type: string
+              message:
+                type: string
+              observedGeneration:
+                type: integer
+              pendingScenarios:
+                type: integer
+              phase:
+                type: string
+              runningScenarios:
+                type: integer
+              startTime:
+                type: string
+              totalScenarios:
+                type: integer
             type: object
         type: object
     served: true
     storage: true
+    subresources:
+      status: {}
